--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <title>Page Title</title>
-</head>
+<html>
 <body>
-    <h1>Source Code Management</h1>
-    <p>Semester 4</p>
+
+<p>Source Code Management</p>
+<p style="color:red;">SEM 4</p>
+<p style="color:blue;">Arip Ismail</p>
+<p style="font-size:50px;">Melaka</p>
+
 </body>
 </html>
+
