--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html>
 <body>
 
-<p>Source Code Management</p>
-<p style="color:red;">SEM 4</p>
-<p style="color:blue;">Arip Ismail</p>
-<p style="font-size:50px;">Melaka</p>
+<h1 style="background-color:DodgerBlue;">Source Code Management</h1>
+
+<p style="background-color:Tomato;">
+SEM 4
+</p>
 
 </body>
 </html>
+
 
